--- a/src/style.css
+++ b/src/style.css
@@ -157,6 +157,12 @@ footer{
     font-weight: 300;
 }
 
+div p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.5rem;
+    color: var(--color2);
+}
+
 
 
 #btnTranslate:hover{
